--- a/note_slopes.ipynb
+++ b/note_slopes.ipynb
@@ -2,17 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import re"
+    "import pandas as pd\n",
+    "import re, os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -26,11 +29,12 @@
     "same_note = {'A#':'Bb', 'C#':'Db', 'D#':'Eb', 'F#': 'Gb', 'G#':'Ab'}\n",
     "\n",
     "def split_note(note):\n",
-    "    assert re.fullmatch('[A-G](#|b)?[0-7]', note) is not None, 'Note not formatted correctly.'\n",
+    "    assert re.fullmatch('[A-G](#|b)?[0-7]', note) is not None, 'Note not formatted correctly: %s'%note\n",
     "    return note[:-1], int(note[-1])\n",
     "\n",
     "def shift_note(note, amount):\n",
     "    # note taken in as string, amount is any integer\n",
+    "    # probably not needed until actually generating stuff\n",
     "    note, octave = split_note(note)\n",
     "    if note in same_note:\n",
     "        note = same_note[note]\n",
@@ -55,8 +59,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Finding Slope Bounds"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -67,28 +78,187 @@
     "    for i in range(len(lst) - 1):\n",
     "        max_jump = max(max_jump, note_dist(lst[i], lst[i+1]))\n",
     "        min_jump = min(min_jump, note_dist(lst[i], lst[i+1]))\n",
-    "    return min_jump, max_jump"
+    "    return str(min_jump) + ' ' + str(max_jump)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating the S-Expressions Table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def categorize_note(note, chord, last_chord):\n",
+    "    return np.random.choice(['C', 'H', 'R'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_s_exp(notes):\n",
+    "    # notes is list of tupes of (note_string, duration)\n",
+    "    s = ''\n",
+    "    notes_only = []\n",
+    "    for note, duration, chord, last_chord in notes:\n",
+    "        s += categorize_note(note, chord, last_chord) + str(duration) + ' '\n",
+    "        notes_only.append(note)\n",
+    "    return find_slope_bounds(notes_only) + ' ' + s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-11"
+       "2"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "note_dist('B4', 'C4')"
+    "s_exp = pd.DataFrame(columns=['id', 'exp', 'song_id', 'song_index'])\n",
+    "s_exp = s_exp.set_index(['id'])\n",
+    "directory = 'raw_solos/'\n",
+    "song_num = 0\n",
+    "for filename in os.listdir(directory):\n",
+    "    if filename.endswith('.csv'):\n",
+    "        measure = 0\n",
+    "        last_chord = None\n",
+    "        curr_s_exp = []\n",
+    "        song = pd.read_csv(directory + filename)\n",
+    "        for i in range(len(song)):\n",
+    "            curr_note = song.iloc[i]\n",
+    "            if measure != int(curr_note['start_time']):\n",
+    "                s = create_s_exp(curr_s_exp)\n",
+    "                row = {'exp': s, 'song_id': song_num, 'song_index': measure}\n",
+    "                s_exp = s_exp.append(row, ignore_index=True)\n",
+    "                curr_s_exp = []\n",
+    "                measure = int(curr_note['start_time'])\n",
+    "            curr_s_exp.append((curr_note['note_name'], curr_note['duration'], curr_note['chord'], last_chord))\n",
+    "            last_chord = curr_note['chord']\n",
+    "        s = create_s_exp(curr_s_exp)\n",
+    "        row = {'exp': s, 'song_id': song_num, 'song_index': measure}\n",
+    "        s_exp = s_exp.append(row, ignore_index=True)\n",
+    "        song_num += 1\n",
+    "song_num"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>exp</th>\n",
+       "      <th>song_id</th>\n",
+       "      <th>song_index</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0 2 C0.25 C0.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-5 0 C0.2 R0.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0 6 R0.05 C0.35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0 0 H0.4 H0.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0 0 R0.6 C0.34</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0 6 C0.23 R0.53</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                exp song_id song_index\n",
+       "0   0 2 C0.25 C0.5        0          0\n",
+       "1   -5 0 C0.2 R0.5        0          1\n",
+       "2  0 6 R0.05 C0.35        0          2\n",
+       "3    0 0 H0.4 H0.1        1          0\n",
+       "4   0 0 R0.6 C0.34        1          1\n",
+       "5  0 6 C0.23 R0.53        1          2"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s_exp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
