--- a/note_slopes.ipynb
+++ b/note_slopes.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -50,9 +50,9 @@
     "    note1, octave1 = split_note(note1)\n",
     "    note2, octave2 = split_note(note2)\n",
     "    if note1 in same_note:\n",
-    "        note1 = same_note[note]\n",
+    "        note1 = same_note[note1]\n",
     "    if note2 in same_note:\n",
-    "        note2 = same_note[note]\n",
+    "        note2 = same_note[note2]\n",
     "    tot = (octave2 - octave1) * 12\n",
     "    tot += note_to_num[note2] - note_to_num[note1]\n",
     "    return tot"
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,23 +111,23 @@
     "    s = ''\n",
     "    notes_only = []\n",
     "    for note, duration, chord, last_chord in notes:\n",
-    "        s += categorize_note(note, chord, last_chord) + str(duration) + ' '\n",
+    "        s += categorize_note(note, chord, last_chord) + '%.3f '%duration\n",
     "        notes_only.append(note)\n",
     "    return find_slope_bounds(notes_only) + ' ' + s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,10 +135,10 @@
    "source": [
     "s_exp = pd.DataFrame(columns=['id', 'exp', 'song_id', 'song_index'])\n",
     "s_exp = s_exp.set_index(['id'])\n",
-    "directory = 'raw_solos/'\n",
+    "directory = 'midi_to_csv/' # 'raw_solos/'\n",
     "song_num = 0\n",
     "for filename in os.listdir(directory):\n",
-    "    if filename.endswith('.csv'):\n",
+    "    if filename.endswith('Night.csv'):\n",
     "        measure = 0\n",
     "        last_chord = None\n",
     "        curr_s_exp = []\n",
@@ -151,8 +151,8 @@
     "                s_exp = s_exp.append(row, ignore_index=True)\n",
     "                curr_s_exp = []\n",
     "                measure = int(curr_note['start_time'])\n",
-    "            curr_s_exp.append((curr_note['note_name'], curr_note['duration'], curr_note['chord'], last_chord))\n",
-    "            last_chord = curr_note['chord']\n",
+    "            curr_s_exp.append((curr_note['note_name'], curr_note['duration'], None, None))#curr_note['chord'], last_chord))\n",
+    "            #last_chord = curr_note['chord']\n",
     "        s = create_s_exp(curr_s_exp)\n",
     "        row = {'exp': s, 'song_id': song_num, 'song_index': measure}\n",
     "        s_exp = s_exp.append(row, ignore_index=True)\n",
@@ -162,103 +162,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>exp</th>\n",
-       "      <th>song_id</th>\n",
-       "      <th>song_index</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0 2 C0.25 C0.5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-5 0 C0.2 R0.5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0 6 R0.05 C0.35</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0 0 H0.4 H0.1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0 0 R0.6 C0.34</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0 6 C0.23 R0.53</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                exp song_id song_index\n",
-       "0   0 2 C0.25 C0.5        0          0\n",
-       "1   -5 0 C0.2 R0.5        0          1\n",
-       "2  0 6 R0.05 C0.35        0          2\n",
-       "3    0 0 H0.4 H0.1        1          0\n",
-       "4   0 0 R0.6 C0.34        1          1\n",
-       "5  0 6 C0.23 R0.53        1          2"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s_exp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
-   "source": []
+   "source": [
+    "s_exp.to_csv('test_files/s_exp_test.csv')"
+   ]
   }
  ],
  "metadata": {
