modified cpt, still need s-exp index

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
        "       [22.  ,  5.  ,  6.75, -4.  ]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,12 +38,13 @@
    "source": [
     "#get data from grammar's csv file of a single type format\n",
     "cluster_info = np.loadtxt(open(\"test_files/test.csv\", \"r\"), delimiter=\",\", skiprows=1)\n",
-    "cluster_info"
+    "cluster_info\n",
+    "#at what index is the s-expression id in this? once we know this, we can add the s-expression id to each node's lsit of s-expressions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -72,10 +73,10 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 0, 0], dtype=int32)"
+       "array([0, 0, 1, 1], dtype=int32)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -108,7 +109,7 @@
     "    def __init__(self, node_num):\n",
     "        self.node_num = node_num\n",
     "        self.s_exp = [] #list of s-exp-ids\n",
-    "        self.cpt = {} \n",
+    "        self.cpt = {} #maps from node_num to conditional probability\n",
     "        self.count = 0\n",
     "    \n",
     "    def add_exp(self, s):\n",
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -193,7 +194,7 @@
        "6  wert        3           1"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -227,7 +228,7 @@
        " 6: ['wert', 3, 1]}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -255,23 +256,28 @@
     "    node_objects.append(Node(cluster_num)) #initialize 1 node for each cluster number\n",
     "    \n",
     "for i in range(0,len(kmeans.labels_)): #iterating through all the data points\n",
-    "    cluster_num = kmeans.labels_[i] #which cluster num the data point corresponds to\n",
+    "    cluster_num = kmeans.labels_[i] #access the cluster num each data point corresponds to\n",
     "    #adding s-exp, song-id (which song), song-index (position in song) to the node object\n",
-    "    node_objects[cluster_num].add_exp(s_exp_dict[i]) #why string??? (previously)"
+    "    node_objects[cluster_num].add_exp(s_exp_dict[i]) #why string??? (previously)\n",
+    "    # find how to add the s-expression id correspondng to that node"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0: 1.0, 1: 0.0}\n"
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-0ad4d0496b0f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0ms_expression_outer\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mouter_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ms_exp\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0ms_expression_inner\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minner_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ms_exp\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m                 \u001b[0;32mif\u001b[0m \u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_outer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_inner\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_inner\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_outer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m                     \u001b[0mouter_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m                     \u001b[0mouter_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcpt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0minner_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnode_num\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
      ]
     }
    ],
@@ -280,13 +286,14 @@
     "for outer_node in node_objects:\n",
     "    for inner_node in node_objects:\n",
     "        outer_node.cpt[inner_node.node_num] = 0\n",
-    "        if (outer_node != inner_node):\n",
-    "            for s_expression_outer in outer_node.s_exp:\n",
-    "                for s_expression_inner in inner_node.s_exp:\n",
-    "                    if s_expression_outer[1] == s_expression_inner[1] and s_expression_inner[2] - s_expression_outer[2] == 1:\n",
-    "                        outer_node.count += 1\n",
-    "                        outer_node.cpt[inner_node.node_num] += 1\n",
-    "    outer_node.cpt = {k:v/outer_node.count for k, v in outer_node.cpt.items() if outer_node.count != 0}\n",
+    "        #if (outer_node != inner_node):\n",
+    "        for s_expression_outer in outer_node.s_exp:\n",
+    "            for s_expression_inner in inner_node.s_exp:\n",
+    "                if s_exp_dict[s_expression_outer][1] == s_exp_dict[s_expression_inner][1] and s_exp_dict[s_expression_inner][2] - s_exp_dict[s_expression_outer][2] == 1:\n",
+    "                    outer_node.count += 1\n",
+    "                    outer_node.cpt[inner_node.node_num] += 1\n",
+    "    #creates the probability of going to the next node, not s-exp\n",
+    "    outer_node.cpt = {k:v/outer_node.count for k, v in outer_node.cpt.items() if outer_node.count != 0} \n",
     "print(outer_node.cpt)"
    ]
   },
