--- a/note_slopes.ipynb
+++ b/note_slopes.ipynb
@@ -88,20 +88,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C4 G4\n",
+      "G4 Bb5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7.5"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def avgmaxslope(exp):\n",
-    "    max_asc, min_desc = 0,0\n",
+    "    max_asc, max_desc = 0,0\n",
     "    for i in range(len(exp) - 1):\n",
-    "        if note_dist(exp[i], exp[i+1]) >= 0:\n",
-    "            max_asc = max(max_asc, note_dist(exp[i], exp[i+1]))\n",
-    "        if note_dist(exp[i], exp[i+1]) <= 0:\n",
-    "            min_desc = min(min_desc, note_dist(exp[i], exp[i+1]))\n",
-    "    return str(min_asc) + ' ' + str(max_desc)\n",
+    "        print(exp[i][0], exp[i+1][0])\n",
+    "        if note_dist(exp[i][0], exp[i+1][0]) >= 0:\n",
+    "            max_asc = max(max_asc, note_dist(exp[i][0], exp[i+1][0]))\n",
+    "        if note_dist(exp[i][0], exp[i+1][0]) <= 0:\n",
+    "            max_desc = max(max_desc, abs(note_dist(exp[i][0], exp[i+1][0])))\n",
+    "    avg = (max_asc + max_desc) / 2\n",
+    "    return avg\n",
     "\n",
-    "\n",
+    "test = [('C4', 0.5), ('G4', 0.25), ('Bb5', 0.4)]\n",
+    "note_dist('C4', 'G4')\n",
+    "avgmaxslope(test)\n",
     "\n"
    ]
   },
