--- a/grammar_generation.ipynb
+++ b/grammar_generation.ipynb
@@ -2,47 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import re\n",
-    "import pychord"
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-d72fc7491b61>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m chord_dictionary = {\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;34m\"major\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"C\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m11\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"L\"\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;34m\"minor\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"C\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"L\"\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;34m\"augmented\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"C\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"L\"\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;34m\"diminished\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"C\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"L\"\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
-     ]
-    }
-   ],
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "chord_dictionary = {\n",
-    "    \"major\": {[0, 4, 7]: \"C\", [2, 4, 6, 11]: \"L\"},\n",
-    "    \"minor\": {[0, 4, 8]: \"C\", [2, 3, 5, 7, 10]: \"L\"},\n",
-    "    \"augmented\": {[0, 4, 8]: \"C\", []: \"L\"},\n",
-    "    \"diminished\": {[0, 3, 6]: \"C\", []: \"L\"},\n",
-    "    \"half-diminished\": {[0, 3, 6, 10]: \"C\", []: \"L\"},\n",
-    "    \"dominant-seventh\": {[0, 4, 7, 10]: \"C\", []: \"L\"}\n",
-    "}\n",
-    "\n"
+    "    \"major\": {\"C\": [0, 4, 7], \"L\": [2, 4, 6, 11]},\n",
+    "    \"minor\": {\"C\": [0, 4, 8], \"L\": [2, 3, 5, 7, 10]},\n",
+    "    \"augmented\": {\"C\": [0, 4, 8], \"L\": []},\n",
+    "    \"diminished\": {\"C\": [0, 3, 6] ,  \"L\": []},\n",
+    "    \"half-diminished\": {\"C\": [0, 3, 6, 10], \"L\": []},\n",
+    "    \"dominant-seventh\": {\"C\": [0, 4, 7, 10], \"L\": [] }\n",
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -65,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -125,69 +115,72 @@
     "        elif split_n in chord['color']:\n",
     "            return L\n",
     "        else:\n",
-    "            return A"
+    "            return A\n",
+    "        \n",
+    "def find_chord_type(chord):\n",
+    "    if \"m7b5\" in chord:\n",
+    "        return \"half-diminished\"\n",
+    "    elif \"j7\" in chord:\n",
+    "        return \"dominant-seventh\"\n",
+    "    elif \"o\" in chord:\n",
+    "        return \"diminished\"\n",
+    "    elif \"m\" in chord: \n",
+    "        return \"minor\"\n",
+    "    else:\n",
+    "        return \"major\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-16-f976e318b907>, line 12)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-f976e318b907>\"\u001b[0;36m, line \u001b[0;32m12\u001b[0m\n\u001b[0;31m    def chord_type(chord):\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "def note_category(note, chord, nextchord):\n",
     "    root = chord[0]\n",
-    "    chord_type = chord_type(chord)\n",
+    "    chord_type = find_chord_type(chord)\n",
     "    dist = note_dist(root, note, True)\n",
-    "    for key in chord_dictionary[chord_type].keys():\n",
-    "        if dist in key:\n",
-    "            return chord_dictionary[chord_type][key]\n",
+    "    print(dist)\n",
+    "    for chord_type, interval_list in chord_dictionary[chord_type].items():\n",
+    "        if dist in interval_list:\n",
+    "            return chord_type\n",
     "    if chord == nextchord:\n",
     "        return \"X\"\n",
     "    else:\n",
     "        return \"A\"\n",
-    "    \n",
-    "def chord_type(chord):\n",
-    "    if \"m7b5\" in chord:\n",
-    "        return \"half-diminished\"\n",
-    "    else if \"j7\" in chord:\n",
-    "        return \"dominant-seventh\"\n",
-    "    else if \"o\" in chord:\n",
-    "        return \"diminished\"\n",
-    "    else if \"m\" in chord: \n",
-    "        return \"minor\"\n",
-    "    else:\n",
-    "        return \"major\"\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "L\n"
+     ]
     }
    ],
    "source": [
-    "note_dist(\"C\", \"Eb5\", True)"
+    "#note_dist(\"C\", \"Eb5\", True)\n",
+    "#note_category(\"C7\", \"Am7b5\", \"Am7b5\")\n",
+    "print(note_category(\"D3\", \"C\", \"C\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
