adding s_expression function

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -2,24 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "from sklearn.cluster import KMeans\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 60,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -30,7 +28,7 @@
        "       [22.  ,  5.  ,  6.75, -4.  ]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,10 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 61,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -65,18 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 62,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 1, 1], dtype=int32)"
+       "array([1, 1, 0, 0], dtype=int32)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,10 +82,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 63,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#kmeans.predict(fill in with our own 7 unit vector data), will classify it into cluster"
@@ -99,10 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 64,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Node:\n",
@@ -118,15 +108,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 65,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -194,7 +195,7 @@
        "6  wert        3           1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,10 +212,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 66,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -228,7 +227,7 @@
        " 6: ['wert', 3, 1]}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,10 +243,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 68,
+   "metadata": {},
    "outputs": [],
    "source": [
     "node_objects = [] #list of nodes for the Markov chain\n",
@@ -258,26 +255,25 @@
     "for i in range(0,len(kmeans.labels_)): #iterating through all the data points\n",
     "    cluster_num = kmeans.labels_[i] #access the cluster num each data point corresponds to\n",
     "    #adding s-exp, song-id (which song), song-index (position in song) to the node object\n",
-    "    node_objects[cluster_num].add_exp(s_exp_dict[i]) #why string??? (previously)\n",
-    "    # find how to add the s-expression id correspondng to that node"
+    "    node_objects[cluster_num].add_exp(cluster_info[i][0]) #why string??? (previously)\n",
+    "    # find how to add the s-expression id correspondng to that node\n",
+    "    # index 0 is s-expression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 69,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'list'",
+     "ename": "KeyError",
+     "evalue": "17.0",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-0ad4d0496b0f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0ms_expression_outer\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mouter_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ms_exp\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0ms_expression_inner\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minner_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ms_exp\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m                 \u001b[0;32mif\u001b[0m \u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_outer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_inner\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_inner\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_outer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m                     \u001b[0mouter_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m                     \u001b[0mouter_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcpt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0minner_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnode_num\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-69-a43177eaa2d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0ms_expression_outer\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mouter_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ms_exp\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0ms_expression_inner\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minner_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ms_exp\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m                 \u001b[0;32mif\u001b[0m \u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_outer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_inner\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_inner\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0ms_exp_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms_expression_outer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m                     \u001b[0mouter_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m                     \u001b[0mouter_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcpt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0minner_node\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnode_num\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 17.0"
      ]
     }
    ],
@@ -293,18 +289,64 @@
     "                    outer_node.count += 1\n",
     "                    outer_node.cpt[inner_node.node_num] += 1\n",
     "    #creates the probability of going to the next node, not s-exp\n",
-    "    outer_node.cpt = {k:v/outer_node.count for k, v in outer_node.cpt.items() if outer_node.count != 0} \n",
-    "print(outer_node.cpt)"
+    "    outer_node.cpt = {k:v/outer_node.count for k, v in outer_node.cpt.items() if outer_node.count != 0} "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 54,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def weighted_random_by_dct(dct):\n",
+    "   rand_val = random.random()\n",
+    "   total = 0\n",
+    "   for k, v in dct.items():\n",
+    "       total += v\n",
+    "       if rand_val <= total:\n",
+    "           return k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def s_expressions(n): #n is length of \n",
+    "    s_expressions = [] #create empty list\n",
+    "    start = int(random.uniform(0, len(node_objects))) #random start node\n",
+    "    next_node = node_objects[start] #get that node\n",
+    "    for i in range(n):\n",
+    "        next_node_num = weighted_random_by_dct(next_node.cpt) #get the next node based on the current node's cpt\n",
+    "        print(next_node_num)\n",
+    "        next_node = node_objects[next_node_num] #set the next node variable to that node\n",
+    "        next_s_exp_id = random.choice(next_node.s_exp) #get a random s-expression in that node \n",
+    "        s_expressions += [next_s_exp_id] #store id in the list\n",
+    "    return s_expressions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-71-e377b9b1f352>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-71-e377b9b1f352>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def produce_notes():\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "def produce_notes(num_of_measures, list_of_chords):\n",
+    "    s_expressions = s_expressions(num_of_measures)\n",
+    "    for i in range(num_of_measures):\n",
+    "        s_expression = s_exp_dict[s_expressions[0]][0]\n",
+    "        possible_notes = possible_notes(list_of_chords[0], s_expression"
+   ]
   }
  ],
  "metadata": {
@@ -323,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
