--- a/note_slopes.ipynb
+++ b/note_slopes.ipynb
@@ -68,7 +68,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def find_slope_bounds(lst):\n",
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +107,7 @@
        "7.5"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,9 +124,9 @@
     "    avg = (max_asc + max_desc) / 2\n",
     "    return avg\n",
     "\n",
-    "test = [('C4', 0.5), ('G4', 0.25), ('Bb5', 0.4)]\n",
-    "note_dist('C4', 'G4')\n",
-    "avgmaxslope(test)\n",
+    "#test = [('C4', 0.5), ('G4', 0.25), ('Bb5', 0.4)]\n",
+    "#note_dist('C4', 'G4')\n",
+    "#avgmaxslope(test)\n",
     "\n"
    ]
   },
@@ -137,8 +139,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
+   "execution_count": 124,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def select_note(lst, curr, minimum, maximum):\n",
@@ -171,26 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('C', 4)\n",
-      "C\n",
-      "4\n",
-      "C3\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'G2'"
+       "'F#3'"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +200,7 @@
     "#value = (split_note(key)[0] + str((split_note(key)[1]) - 1))\n",
     "#print(value)\n",
     "\n",
-    "#select_note(['G3', 'F#3'], 'C4', 5, 5)"
+    "#select_note(['G3', 'F#3', 'A3', 'A#3'], 'C4', 3, 3)"
    ]
   },
   {
@@ -219,7 +213,9 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def consonance(measure): #measure is 1 measure of an s-expression\n",
